# rust-find-duplicate-files

./: Cargo.toml  LICENSE.md  README.md
src/: main.rs
test_data/: ignore.txt
